# DiffPDF

./: README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  pypi-publish.yml
src/DiffPDF/: __init__.py  cli.py  page_check.py  text_check.py  visual_check.py
src/diffpdf/: __init__.py  cli.py  comparators.py  hash_check.py  logger.py  page_check.py  text_check.py  visual_check.py
tests/: test_api.py  test_cli.py  test_comparators.py  test_hash_check.py  test_page_check.py  test_text_check.py  test_visual_check.py
