[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "diffpdf"
dynamic = ["version"]
description = "A tool for comparing PDF files"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Justus Rijke"}]
requires-python = ">=3.10"

dependencies = [
    "click",
    "colorlog",
    "pymupdf>=1.23.0",
    "pixelmatch>=0.3.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
diffpdf = "diffpdf:main"

[tool.hatch.version]
source = "vcs"
