[project]
name = "diffpdf"
description = "A tool for comparing PDF files"
readme = "README.md"
requires-python = ">=3.11.1"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Justus Rijke", email = "justusrijke@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]
dependencies = [
  "Pillow>=12.1.1",
  "click>=8",
  "pixelmatch-fast>=1.3.4",
  "pymupdf>=1.23.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/JustusRijke/DiffPDF"
Issues = "https://github.com/JustusRijke/DiffPDF/issues"

[project.scripts]
diffpdf = "diffpdf.cli:cli"

[dependency-groups]
dev = [
  "nodeenv>=1.4.0",     # Required for pre-commit
  "pre-commit>=4.5.1",
  "pytest>=9",
  "pytest-cov>=6",
  "ruff>=0.15.4",
  "tomli>=2.4.1",
  "ty>=0.0.8",
]

[build-system]
requires = [
  "hatch-vcs",
  "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest]
addopts = [
  "--cov",                      # Enable coverage
  "--cov-branch",               # Make sure to cover every decision branch
  "--cov-report=term-missing",  # Report which lines aren't covered
  "--cov-report=xml",           # Dump to XML for Codecov
  "-v",                         # Verbose output
]
filterwarnings = [
  "error"
]                               # Treat all warnings as errors (e.g., deprecation warnings)
strict = true
testpaths = ["tests"]

[tool.ruff.lint]
preview = true
extend-select = [
  "I",             # Sort imports
  "ANN",           # Enforce type annotations
  "PT",            # Common style issues or inconsistencies with pytest-based tests
  "PTH",           # Use PathLib
  "PLW1514",       # Must specify file encoding
]

[tool.ruff.lint.isort]
combine-as-imports = true  # Combines "as" imports on the same line

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]  # Do not enforce type annotations for tests

[tool.tombi.format.rules]
trailing-comment-alignment = true
